// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_channel should match snapshot 1`] = `
<li
  className="SidebarChannel"
  draggable="false"
  onTransitionEnd={[Function]}
  role="listitem"
  tabIndex={-1}
>
  <Connect(SidebarBaseChannel)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "",
        "delete_at": 0,
        "display_name": "channel_display_name",
        "extra_update_at": 0,
        "group_constrained": false,
        "header": "",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "",
        "purpose": "",
        "scheme_id": "",
        "team_id": "",
        "total_msg_count": 0,
        "type": "O",
        "update_at": 0,
      }
    }
    currentTeamName="team_name"
    isCollapsed={false}
  />
</li>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when DM channel 1`] = `
<li
  className="SidebarChannel"
  draggable="false"
  onTransitionEnd={[Function]}
  role="listitem"
  tabIndex={-1}
>
  <Connect(injectIntl(SidebarDirectChannel))
    channel={
      Object {
        "create_at": 0,
        "creator_id": "",
        "delete_at": 0,
        "display_name": "channel_display_name",
        "extra_update_at": 0,
        "group_constrained": false,
        "header": "",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "",
        "purpose": "",
        "scheme_id": "",
        "team_id": "",
        "total_msg_count": 0,
        "type": "D",
        "update_at": 0,
      }
    }
    currentTeamName="team_name"
    isCollapsed={false}
  />
</li>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when GM channel 1`] = `
<li
  className="SidebarChannel"
  draggable="false"
  onTransitionEnd={[Function]}
  role="listitem"
  tabIndex={-1}
>
  <Connect(SidebarGroupChannel)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "",
        "delete_at": 0,
        "display_name": "channel_display_name",
        "extra_update_at": 0,
        "group_constrained": false,
        "header": "",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "",
        "purpose": "",
        "scheme_id": "",
        "team_id": "",
        "total_msg_count": 0,
        "type": "G",
        "update_at": 0,
      }
    }
    currentTeamName="team_name"
    isCollapsed={false}
  />
</li>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when active 1`] = `
<li
  className="SidebarChannel active"
  draggable="false"
  onTransitionEnd={[Function]}
  role="listitem"
  tabIndex={-1}
>
  <Connect(SidebarBaseChannel)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "",
        "delete_at": 0,
        "display_name": "channel_display_name",
        "extra_update_at": 0,
        "group_constrained": false,
        "header": "",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "",
        "purpose": "",
        "scheme_id": "",
        "team_id": "",
        "total_msg_count": 0,
        "type": "O",
        "update_at": 0,
      }
    }
    currentTeamName="team_name"
    isCollapsed={false}
  />
</li>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when collapsed 1`] = `
<li
  className="SidebarChannel collapsed"
  draggable="false"
  onTransitionEnd={[Function]}
  role="listitem"
  tabIndex={-1}
>
  <Connect(SidebarBaseChannel)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "",
        "delete_at": 0,
        "display_name": "channel_display_name",
        "extra_update_at": 0,
        "group_constrained": false,
        "header": "",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "",
        "purpose": "",
        "scheme_id": "",
        "team_id": "",
        "total_msg_count": 0,
        "type": "O",
        "update_at": 0,
      }
    }
    currentTeamName="team_name"
    isCollapsed={true}
  />
</li>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when unread 1`] = `
<li
  className="SidebarChannel unread"
  draggable="false"
  onTransitionEnd={[Function]}
  role="listitem"
  tabIndex={-1}
>
  <Connect(SidebarBaseChannel)
    channel={
      Object {
        "create_at": 0,
        "creator_id": "",
        "delete_at": 0,
        "display_name": "channel_display_name",
        "extra_update_at": 0,
        "group_constrained": false,
        "header": "",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "",
        "purpose": "",
        "scheme_id": "",
        "team_id": "",
        "total_msg_count": 0,
        "type": "O",
        "update_at": 0,
      }
    }
    currentTeamName="team_name"
    isCollapsed={false}
  />
</li>
`;
